# pack

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUE-compose-function-remapping.md  README.md  flake.nix
.github/workflows/: ci.yml  publish.yml
assets/: adder_fixedbase.wasm  bigrodata_fixedbase.wasm  doubler_fixedbase.wasm  host_actor_fixedbase.wasm  lifecycle_actor_fixedbase.wasm  math_mock_fixedbase.wasm  math_real_fixedbase.wasm  pack_alloc_module.wasm
changes/: 0001-witplus-dialect-and-abi.md  theater-requirements.md
components/: .gitignore
components/echo/: Cargo.toml
components/echo/.cargo/: config.toml
components/echo/src/: lib.rs
components/logger/: Cargo.toml
components/logger/src/: lib.rs
components/sexpr/: Cargo.toml
components/sexpr/src/: lib.rs
crates/composite-abi/: Cargo.toml
crates/composite-abi/src/: lib.rs  value.rs
crates/composite-abi/tests/: derive_tests.rs
crates/composite-derive/: Cargo.toml
crates/composite-derive/src/: lib.rs
crates/composite-guest/: Cargo.toml
crates/composite-guest-macros/: Cargo.toml
crates/composite-guest-macros/src/: codegen.rs  lib.rs  wit_parser.rs
crates/composite-guest/src/: lib.rs
crates/pack-abi/: Cargo.toml
crates/pack-abi/src/: hash.rs  lib.rs  parse.rs  value.rs
crates/pack-abi/tests/: derive_tests.rs  mailbox_decode_bench.rs
crates/pack-derive/: Cargo.toml
crates/pack-derive/src/: lib.rs
crates/pack-guest/: Cargo.toml
crates/pack-guest-macros/: Cargo.toml
crates/pack-guest-macros/src/: codegen.rs  lib.rs  metadata.rs  wit_parser.rs
crates/pack-guest/src/: lib.rs
docs/: DESIGN.md  INTERFACE-HASHING.md  MEMORY_ALLOCATION_RFC.md  TYPE-SYSTEM.md  component-composition.md  component-linking-exploration.md  package-linking-exploration.md  package-linking.md  pic-composition.md  world-macro-design.md  world-macro-impl-sketch.rs
docs/changes/: EMBEDDED-TYPE-METADATA.md
docs/spec/: TYPE-SYSTEM-SPEC-DRAFT.md
examples/: encode_test.rs  test_alloc.rs
examples/transforms/: aliases.pact  calculator.pact  caller.pact  main.rs
experiments/composition/: README.md  build-and-compose.sh
experiments/composition/adder/: Cargo.toml
experiments/composition/adder/src/: lib.rs
experiments/composition/doubler/: Cargo.toml
experiments/composition/doubler/src/: lib.rs
experiments/composition/wit/: adder.wit  doubler.wit
issues/list-encoding/: CHANGESET.md  PACK_BUG.md
src/: codegen.rs  compose.rs  interface_impl.rs  lib.rs  link.rs  main.rs  metadata.rs  transform.rs  types.rs
src/abi/: mod.rs  value.rs
src/compose/: error.rs  merger.rs  mod.rs  parser.rs  static_compose.rs
src/parser/: mod.rs  pact.rs  validation.rs  wit.rs
src/runtime/: composition.rs  host.rs  interceptor.rs  interface_check.rs  mod.rs  pic_composition.rs
src/wit_plus/: mod.rs  parser.rs  types.rs  validation.rs
tests/: abi_invalid.rs  abi_roundtrip.rs  alloc_module.rs  compose.rs  compose_actor.rs  compose_async.rs  compose_graph.rs  compose_hashcheck.rs  compose_pair.rs  composition.rs  handler_actor_hash_convergence.rs  host_functions.rs  imported_alloc.rs  interceptor_backpressure.rs  interface_enforcement.rs  link_actor.rs  link_mock.rs  pic_composition.rs  schema_validation.rs  type_metadata.rs  wasm_execution.rs  wisp_compound_param_test.rs  wisp_list_param_test.rs  wisp_multi_param_complex_test.rs  wisp_multi_param_test.rs  wisp_param_test.rs  wisp_result_param_test.rs  wisp_return_complex_test.rs  wisp_variant_param_test.rs
