[workspace]
members = [
    "crates/pack-abi",
    "crates/pack-derive",
    "crates/pack-guest",
    "crates/pack-guest-macros",
]
exclude = [
    "packages/adder",
    "packages/doubler",
    "packages/echo",
    "packages/logger",
    "packages/sexpr",
    "packages/typed-actor",
    "packages/typed-math",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinrozzi/pack"

[workspace.dependencies]
packr-abi = { version = "0.4.0", path = "crates/pack-abi", default-features = false }
packr-derive = { version = "0.4.0", path = "crates/pack-derive" }
packr-guest = { version = "0.4.0", path = "crates/pack-guest" }
packr-guest-macros = { version = "0.4.0", path = "crates/pack-guest-macros" }

[package]
name = "packr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A WebAssembly package runtime with extended WIT support for recursive types"

[[bin]]
name = "packr"
path = "src/main.rs"

[[bin]]
name = "pact"
path = "src/bin/pact.rs"

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }

# WASM execution with async support
wasmtime = "27"

# Serialization for recursive types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For debugging, can add binary format later

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Static composition - parse and emit WASM modules
wasmparser = "0.219"
wasm-encoder = "0.219"

# Hashing for interface compatibility
sha2 = "0.10"

# Re-export pack-abi types for unified Value/FromValue/ConversionError
packr-abi = { workspace = true, features = ["std", "serde"] }

[dev-dependencies]
wat = "1.0"  # For writing test modules in WAT
tokio = { version = "1.0", features = ["rt", "macros"] }  # For async tests

[[example]]
name = "transforms"
path = "examples/transforms/main.rs"
