[workspace]
members = [
    "crates/pack-abi",
    "crates/pack-derive",
    "crates/pack-guest",
    "crates/pack-guest-macros",
]
exclude = [
    "packages/pack-alloc",
    "packages/echo-pic",
    "packages/hostcall-pic",
    "packages/doubler-pic",
    "packages/adder-pic",
    "packages/adder",
    "packages/comp-actor",
    "packages/comp-app",
    "packages/comp-app2",
    "packages/comp-async-math",
    "packages/comp-util",
    "packages/host-actor",
    "packages/lifecycle-actor",
    "packages/math-real",
    "packages/math-mock",
    "packages/math-wrong",
    "packages/doubler",
    "packages/echo",
    "packages/logger",
    "packages/sexpr",
    "packages/typed-actor",
    "packages/typed-math",
]

[workspace.package]
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinrozzi/pack"

[workspace.dependencies]
packr-abi = { version = "0.11.1", path = "crates/pack-abi", default-features = false }
packr-derive = { version = "0.11.1", path = "crates/pack-derive" }
packr-guest = { version = "0.11.1", path = "crates/pack-guest" }
packr-guest-macros = { version = "0.11.1", path = "crates/pack-guest-macros" }

[package]
name = "packr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A WebAssembly package runtime with extended WIT support for recursive types"

[[bin]]
name = "packr"
path = "src/main.rs"

[[bin]]
name = "pact"
path = "src/bin/pact.rs"

[dependencies]
# CLI
clap = { version = "4.0", features = ["derive"] }

# WASM execution with async support
wasmtime = "27"

# Serialization for recursive types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For debugging, can add binary format later
toml = "0.8"  # Parse the compose manifest (`packr compose <manifest>`)

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parse WASM data segments for `packr inspect` (CGRF metadata extraction)
wasmparser = "0.219"

# Component composition: the multi-memory merge post-pass (shim + rewire)
walrus = "0.23"

# Hashing for interface compatibility
sha2 = "0.10"

# Async trait support for CallInterceptor and tokio runtime handle for
# the sync host-bridge -> async interceptor bridge.
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Re-export pack-abi types for unified Value/FromValue/ConversionError
packr-abi = { workspace = true, features = ["std", "serde"] }

[dev-dependencies]
wat = "1.0"  # For writing test modules in WAT
wasmtime = "27"  # Drive the allocator module directly in the 1b bounded-memory test
walrus = "0.23"  # Count memories in the composite (compose_pair M1 test)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

[[example]]
name = "transforms"
path = "examples/transforms/main.rs"
