[package]
name = "composite-abi"
version = "0.1.0"
edition = "2021"
description = "Graph-encoded ABI for Composite runtime - supports recursive types"

[features]
default = ["std"]
std = []
derive = ["composite-derive"]

[dependencies]
# no_std compatible hash map
hashbrown = "0.14"
# Optional derive macro
composite-derive = { path = "../composite-derive", optional = true }
