[package]
name = "composite-guest"
version = "0.1.0"
edition = "2021"
description = "Guest-side helpers for Composite WASM components"
license = "MIT OR Apache-2.0"

[dependencies]
composite-abi = { path = "../composite-abi", default-features = false }
composite-guest-macros = { path = "../composite-guest-macros" }
