[package]
name = "pack-abi"
version = "0.1.0"
edition = "2021"
description = "Graph-encoded ABI for Pack runtime - supports recursive types"

[features]
default = ["std"]
std = []
derive = ["pack-derive"]
serde = ["dep:serde"]

[dependencies]
# no_std compatible hash map
hashbrown = "0.14"
# SHA-256 for type hashing (no_std compatible)
sha2 = { version = "0.10", default-features = false }
# Optional derive macro
pack-derive = { path = "../pack-derive", optional = true }
# Optional serde support for host-side usage
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
