[package]
name = "packr-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph-encoded ABI for Pack runtime - supports recursive types"

[lib]
name = "packr_abi"

[features]
default = ["std"]
std = []
derive = ["packr-derive"]
serde = ["dep:serde"]

[dependencies]
# no_std compatible hash map
hashbrown = "0.14"
# SHA-256 for type hashing (no_std compatible)
sha2 = { version = "0.10", default-features = false }
# Optional derive macro
packr-derive = { workspace = true, optional = true }
# Optional serde support for host-side usage
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
