[package]
name = "pack-guest-macros"
version.workspace = true
edition.workspace = true
description = "Proc macros for Pack guest packages"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
pack-abi = { workspace = true, features = ["std"] }
