[package]
name = "packr-guest-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for Pack guest packages"

[lib]
name = "packr_guest_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
packr-abi = { workspace = true, features = ["std"] }
