[package]
name = "pack-guest"
version.workspace = true
edition.workspace = true
description = "Guest-side helpers for Pack WASM packages"
license = "MIT OR Apache-2.0"

[features]
default = []
derive = ["dep:pack-derive"]

[dependencies]
pack-abi = { workspace = true, default-features = false }
pack-guest-macros.workspace = true
pack-derive = { workspace = true, optional = true }
dlmalloc = { version = "0.2", features = ["global"] }
