[package]
name = "packr-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest-side helpers for Pack WASM packages"

[lib]
name = "packr_guest"

[features]
default = []
derive = ["dep:packr-derive"]

[dependencies]
packr-abi = { workspace = true, default-features = false }
packr-guest-macros.workspace = true
packr-derive = { workspace = true, optional = true }
dlmalloc = { version = "0.2", features = ["global"] }
