[package]
name = "packr-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest-side helpers for Pack WASM packages"

[lib]
name = "packr_guest"

[features]
default = []
derive = ["dep:packr-derive"]
# Building the guest as a PIC side module (relocation-model=pic + -shared, the
# package-composition recipe). Newer rustc (>1.92) injects
# `--export=__heap_base` / `--export=__data_end` into the wasm-cdylib link, which
# lld cannot satisfy under `-shared` (the heap base is provided by the loader via
# the GOT). This feature defines placeholder symbols so those injected exports
# resolve. It MUST NOT be enabled for a non-PIC build — there lld defines these
# itself and the two would collide.
pic = []

[dependencies]
packr-abi = { workspace = true, default-features = false }
packr-guest-macros.workspace = true
packr-derive = { workspace = true, optional = true }
# Linked-in default allocator: `setup_guest!` installs `DlmallocAllocator` so an
# actor is a plain `cargo build` (own memory, own heap) — no imported `pack:alloc`
# provider to fuse in. Same allocator the old bundled `pack-alloc` module used.
dlmalloc = { version = "0.2", default-features = false }
