[package]
name = "doubler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"

[package.metadata.component]
package = "process:doubler"

[package.metadata.component.bindings]
generate = true

[package.metadata.component.target]
path = "../wit/doubler.wit"
world = "doubler"
